fix z-index issues on landing page slider:  hero < slides < grid < hero text < header < collapsible menu

--- a/src/css/partials/forms.scss
+++ b/src/css/partials/forms.scss
@@ -21,7 +21,6 @@ textarea {
   @include media('<=phone') {
     display: block;
     width: 100%;
-    font-size: 1.4rem;
   }
 
 
