--- a/src/css/partials/hero.scss
+++ b/src/css/partials/hero.scss
@@ -1,19 +1,21 @@
 body.has-hero {
+
   #animated-grid {
     display: block;
+    position: absolute;
     right: 0;
+    bottom: 0;
     min-width: 500px;
+    max-width: 100vw;
+    min-height: 750px;
+    height: 67vh;
     max-height: 100vh;
     overflow: hidden;
     text-align: left;
-    z-index: ($z-hero + 1);
-
-    @include media("<=tablet") {
-      max-width: 100%;
-    }
+    z-index: ($z-hero + 2);
 
     @include media(">=mega") {
-      max-width: 750px;
+      max-width: 67vw;
     }
 
   }
@@ -22,30 +24,32 @@ body.has-hero {
     position: absolute;
     bottom: 0;
     right: 0;
-    max-width: 50%;
+    max-width: 100%;
+
     @include media("<=tablet") {
       max-width: 100%;
     }
+
     @include media(">=mega") {
       max-width: 750px;
     }
   }
 
 
-
   #slides{
     position: relative;
     height: 150px;
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
     list-style-type: none;
+    opacity: 0.99; // z-index hack
+    z-index: ($z-hero + 1);
   }
 
   .slide{
-
     position: absolute;
-    left: 0px;
-    top: 0px;
+    left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
     opacity: 0;
@@ -53,14 +57,30 @@ body.has-hero {
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
-    width: 100vw;
     max-width: 100%;
     min-height: 100vh;
-
-    -webkit-transition: opacity 1s;
-    -moz-transition: opacity 1s;
-    -o-transition: opacity 1s;
     transition: opacity 1s;
+  }
+
+  .claim {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 40vh;
+    text-align: center;
+    width: 100%;
+    z-index: ($z-hero + 3);
+
+    .container {
+      position: relative;
+      margin: 0 auto;
+    }
+
+    h1 {
+      color: $c-white;
+      text-shadow: 1px 1px 2px rgba($c-black, 0.5);
+      text-align: left;
+    }
   }
 
   .showing{
@@ -93,7 +113,7 @@ body.has-hero {
 
   @keyframes anim01 {
     0% {
-      opacity: 10;
+      opacity: 1;
     }
 
     50% {
